kubernetes/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taxai-rabbitmq
  labels:
    app: taxai
    component: rabbitmq
spec:
  ports:
  - port: 5672
    targetPort: 5672
    protocol: TCP
    name: amqp
  - port: 15672
    targetPort: 15672
    protocol: TCP
    name: management
  selector:
    app: taxai
    component: rabbitmq
